--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,6 @@
 .main-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0, 0.7);
+  padding: 20px 30%;
+  background-color: rgba(0,0,0, 0.6);
 }
