--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,10 +2,10 @@
   display: flex;
   width: 600px;
   min-height: 80px;
+  max-height: 400px;
   padding: 20px;
   border: 1px solid rgba(0,0,0, 0.3);
   border-radius: 6px;
-  box-shadow: 2px 3px 4px rgba(0,0,0, 0.2);
   background-color:  whitesmoke;
 }
 
@@ -34,8 +34,8 @@
 
 .result-search-block{
   width: 100%;
-  height: 300px;
   border: 1px solid lightgray;
+  border-radius: 6px;
   overflow: auto;
 }
 .result-search-block::-webkit-scrollbar {
@@ -49,6 +49,11 @@
   border-radius: 10px;
   border: 3px solid rgba(0,0,0, 0.3);
 }
+
+.result-search-block .not-found{
+  text-align: center;
+}
+
 .result-search-list{
   display: flex;
   flex-direction: column;
