change method goToSearch - return Observable

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -18,7 +18,7 @@
     <ng-container *ngIf="isSelectedItem">
 
     <div #searchBlock class="result-search-block">
-      <div class="not-found" *ngIf="isNotResult">
+      <div class="not-found" *ngIf="isNotFound">
         <p>text not found</p>
       </div>
       <div #searchResult class="result-search-list" >
