responsive search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <div class="main-container">
-  <app-search></app-search>
+  <div class="search-section-big section">
+    <p>section-big</p>
+    <app-search></app-search>
+  </div>
+  <div class="search-section-middle section">
+    <p>section-middle</p>
+    <app-search></app-search>
+  </div>
+  <div class="search-section-small section">
+    <p>section-small</p>
+    <app-search></app-search>
+  </div>
 </div>
 
