--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,28 @@
+
 .main-container{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 100%;
   height: 100%;
-  padding: 20px 30%;
-  background-color: rgba(0,0,0, 0.6);
+  padding: 20px;
+}
+.section{
+  padding: 20px;
+  border: 1px solid grey;
+  border-radius: 6px;
+  background-color: rgba(0,0,0, 0.2);
+}
+.section p {
+  text-align: center;
+}
+.search-section-big{
+  width: 100%;
+
+}
+.search-section-middle{
+  width: 50%;
+}
+.search-section-small{
+  width: 25%;
 }
