add search by DB method

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="main-container">
+
   <div class="search-section-big section">
-    <p>section-big</p>
-    <app-search></app-search>
+    <p>search by API</p>
+    <app-search searchBy="api" ></app-search>
   </div>
+
   <div class="search-section-middle section">
-    <p>section-middle</p>
-    <app-search></app-search>
+    <p>search by DB</p>
+    <app-search searchBy="db" ></app-search>
   </div>
-  <div class="search-section-small section">
-    <p>section-small</p>
-    <app-search></app-search>
-  </div>
+
+
 </div>
 
